{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 77,
  "lineage": "7f39e351-db84-7a46-974d-7a6093049814",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408882703417:security-group/sg-00ef97dd14045aeed",
            "description": "terraform first resource created ever",
            "egress": [],
            "id": "sg-00ef97dd14045aeed",
            "ingress": [],
            "name": "PrimoCorsoConMioFiglio",
            "name_prefix": "",
            "owner_id": "408882703417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CourseWithMySonEmiliano"
            },
            "tags_all": {
              "Name": "CourseWithMySonEmiliano"
            },
            "timeouts": null,
            "vpc_id": "vpc-063c259bab99bbd83"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408882703417:security-group/sg-01f96f9cf344e7224",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f96f9cf344e7224",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "6.7.8.9/32"
                ],
                "description": "",
                "from_port": 3689,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3689
              }
            ],
            "name": "my-dynamic-sg",
            "name_prefix": "",
            "owner_id": "408882703417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-Dynamic-SG"
            },
            "tags_all": {
              "Name": "Terraform-Dynamic-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-063c259bab99bbd83"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}